--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "magdv/diadoc-php",
+    "name": "VyacheslavBornyakov/diadoc-php",
     "description": "Diadoc API implementation",
     "type": "library",
     "license": "MIT",
